--- a/PJ-8 credit_card+shopping_mall(信用卡+购物商场)/README
+++ b/PJ-8 credit_card+shopping_mall(信用卡+购物商场)/README
@@ -3,7 +3,7 @@
 PJ-8 credit_card+shopping_mall:
 
 |—— README                     #使用前帮助文档
-|—— credit_card                #信用卡主程序目录
+|—— card                       #信用卡主程序目录
 |   |—— __init__.py
 |   |—— bin                    #信用卡执行文件目录
 |   |   |—— __init__.py
@@ -12,7 +12,7 @@ PJ-8 credit_card+shopping_mall:
 |   |—— conf                   #配置文件目录
 |   |   |—— __init__.py
 |   |   |—— setting.py         #配置程序
-|   |—— lib                    #相关逻辑程序目录
+|   |—— libs                   #相关逻辑程序目录
 |   |   |—— __init__.py
 |   |   |—— accounts.py        #账户数据，用于从文件加载和存储
 |   |   |—— auth.py            #用户认证程序
@@ -24,11 +24,12 @@ PJ-8 credit_card+shopping_mall:
 |   |   |—— __init__.py
 |   |   |—— example.py         #生成初始账户数据
 |   |   |—— accounts           #存所有用户的账户数据，一个用户一个文件
-|   |       |—— 1.json         #一个账户示例文件
+|   |       |—— 62285589.json  #一个账户示例文件
 |   |—— log                    #日志目录
 |   |   |—— __init__.py
 |   |   |—— access.log         #账户访问和操作等日志
 |   |   |—— transaction.log    #所有交易日志
-|—— shopping                   #商城目录
+|—— mall                       #商城目录
 |   |—— __init__.py
 |   |—— shopping.py            #商城程序
+|   |—— yang.json              #一个账户实例
